Add ci pipeline for UAA v41, stemcell line 3421
[#147362237](https://www.pivotaltracker.com/story/show/147362237)

Signed-off-by: Marco Voelz <marco.voelz@sap.com>

--- a/ci/compiled-releases/pipeline.yml
+++ b/ci/compiled-releases/pipeline.yml
@@ -226,6 +226,26 @@ jobs:
         params:
           file: "compiled-release/*.tgz"
 
+  - name: compile-uaa-release-41-ubuntu-trusty-3421
+    plan:
+      - aggregate:
+          - get: bosh-deployment
+          - get: uaa-release
+            version:
+              version: "41"
+          - get: ubuntu-trusty-3421-stemcell
+            version:
+              version: "3421.6"
+      - task: export-release
+        file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
+        privileged: true
+        input_mapping:
+          stemcell: ubuntu-trusty-3421-stemcell
+          release: uaa-release
+      - put: compiled-releases
+        params:
+          file: "compiled-release/*.tgz"
+
   - name: compile-credhub-release-8-ubuntu-trusty-3421
     plan:
       - aggregate:
