set gateway_user to jumpbox when jumpbox-user ops file is used

--- a/external-ip-not-recommended.yml
+++ b/external-ip-not-recommended.yml
@@ -17,9 +17,8 @@
     static_ips: [((external_ip))]
 
 - type: replace
-  path: /instance_groups/name=bosh/properties/director/default_ssh_options?
-  value:
-    gateway_host: ((external_ip))
+  path: /instance_groups/name=bosh/properties/director/default_ssh_options?/gateway_host
+  value: ((external_ip))
 
 # todo should not access non-defined vars
 - type: replace
