--- a/bosh.yml
+++ b/bosh.yml
@@ -3,9 +3,9 @@ name: bosh
 
 releases:
 - name: bosh
-  version: "262"
-  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-262-ubuntu-trusty-3421.3-20170605-212657-350884764-20170605212702.tgz?versionId=7o7nryGyIKoHmwpl7TyQpISDqgm5qqLD
-  sha1: bec3fe2dbca517c06ffc6039baebdafba4aaabe4
+  version: "262.1"
+  url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/bosh-262.1-ubuntu-trusty-3421.9-20170621-055124-244370454-20170621055129.tgz?versionId=lxNGZVeHOlvxh4LyMgNxnHC8wczKDP70
+  sha1: 1ad2a2b9913c20eac5f27a5e9ad71739c633d37d
 
 resource_pools:
 - name: vms
