--- a/config-server.yml
+++ b/config-server.yml
@@ -3,8 +3,8 @@
   value:
     name: config-server
     version: 0.0.1
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/config-server-0.0.1-ubuntu-trusty-3421.3-20170608-000454-157276468-20170608000457.tgz?versionId=HwF8cmit07OsD4uhc3lK2GvrsNxUyql.
-    sha1: 674dbf587cddfa9a179917ac9af770d864f40440
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/config-server-0.0.1-ubuntu-trusty-3421.9-20170621-054646-35724067-20170621054651.tgz?versionId=yZEwe6tPH17F9oFP4CgMg8s0fzN_VTzJ
+    sha1: bd991a7a43623fd056ca4041e78461fbd369b3d8
 
 - type: replace
   path: /instance_groups/name=bosh/jobs/-
