--- a/uaa.yml
+++ b/uaa.yml
@@ -3,8 +3,8 @@
   value:
     name: uaa
     version: "40"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-40-ubuntu-trusty-3421.3-20170605-212555-743029072-20170605212601.tgz?versionId=ovJOBY5Jx27BkQW0uZs7WfXJqJKgWIbq
-    sha1: 80fcf833818d0b333e2eb398fa96991044926876
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-40-ubuntu-trusty-3421.9-20170621-054414-740710591-20170621054420.tgz?versionId=6jmAYeAgttYgg3f5t3.8tiE3rUzdOecd
+    sha1: ff99afc8ca639fcfa9c545abb9dc0e7b04ed1335
 
 # Switch Director to use UAA
 - type: replace
