adding flannel to master

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -40,6 +40,8 @@ instance_groups:
   - name: *network-name
   azs: [z1]
   jobs:
+  - name: flanneld
+    release: kubo
   - name: kubernetes-api
     release: kubo
     properties:
