Rename cf-tcp-router-name and kubernetes_api_ip to kubernetes-master-host
Signed-off-by: Josh Winters <jwinters@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -53,7 +53,7 @@ instance_groups:
   - name: kubeconfig
     release: kubo
     properties:
-      kubernetes-api-url: &kubo_url "https://((kubernetes_master_host)):8443"
+      kubernetes-api-url: &kubo_url "https://((kubernetes_master_host)):((kubernetes-master-port))"
       kubelet-password: ((kubelet-password))
       tls:
         kubernetes: ((tls-kubernetes))
