--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -6,7 +6,7 @@ credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABC
 
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
-external-kubo-port: # Port to use for Kubernetes API
+kubernetes_master_port: # Port to use for Kubernetes API
 
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
@@ -27,7 +27,7 @@ worker_target_pool: # target pool that worker nodes will be a part of
 # CF routing mode settings
 # Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
 # routing_mode: cf
-# cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
+# kubernetes_master_host: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
 # routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 # routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
 # routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
