Change default disk from D1 to D1_v2 which is supported on all Azure environments

--- a/azure/cpi.yml
+++ b/azure/cpi.yml
@@ -17,7 +17,7 @@
 - type: replace
   path: /resource_pools/name=vms/cloud_properties?
   value:
-    instance_type: Standard_D1
+    instance_type: Standard_D1_v2
 
 - type: replace
   path: /networks/name=default/subnets/0/cloud_properties?
