--- a/azure/custom-environment.yml
+++ b/azure/custom-environment.yml
@@ -2,3 +2,7 @@
 - type: replace
   path: /instance_groups/name=bosh/properties/azure/environment
   value: ((environment))
+
+- type: replace
+  path: /cloud_provider/properties/azure/environment
+  value: ((environment))
