--- a/src/kubo-deployment-tests/resources/environments/with_no_proxy/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/with_no_proxy/director.yml
@@ -34,4 +34,4 @@ kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 no_proxy: dont.proxy.me
 
 routing_mode: iaas
-kubernetes_api_ip: 12.23.34.45
+kubernetes_api_host: 12.23.34.45
