--- a/azure/cloud-config.yml
+++ b/azure/cloud-config.yml
@@ -6,10 +6,10 @@ azs:
 vm_types:
 - name: default
   cloud_properties:
-    instance_type: Standard_D1
+    instance_type: Standard_D1_v2
 - name: large
   cloud_properties:
-    instance_type: Standard_D3
+    instance_type: Standard_D3_v2
 
 disk_types:
 - name: default
