--- a/src/kubo-deployment-tests/resources/environments/with_http_proxy/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/with_http_proxy/director.yml
@@ -35,4 +35,4 @@ kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 http_proxy: my.proxy.com
 
 routing_mode: iaas
-kubernetes_api_host: 12.23.34.45
+kubernetes_master_host: 12.23.34.45
