--- a/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
@@ -33,3 +33,4 @@ kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
 routing_mode: iaas
 kubernetes_master_host: 12.23.34.45
+kubernetes_master_port: 8443
