--- a/src/kubo-deployment-tests/resources/environments/test_openstack/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_openstack/director.yml
@@ -7,7 +7,7 @@ tags: # tags below are used if jumpbox and NAT were deployed using https://githu
   - internal # allow access to the instances in same network from BOSH
 zone: # name of GCP zone
 
-internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into. 
+internal_ip: # Internal ip address of the BOSH director. Please select an available ip address in the network you wish to deploy into.
 
 deployments_network: network-name # Network name to deploy service in your cloud config
 
@@ -33,3 +33,4 @@ kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
 
 routing_mode: iaas
 kubernetes_master_host: 12.23.34.45
+kubernetes_master_port: 8443
