Add kubernetes_master_port property to generic config

--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -21,6 +21,7 @@ kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest
 # Comment this section when using CF routing mode
 routing_mode: iaas
 kubernetes_master_host: # IP address that can be used to reach the Kubernetes API, usually the address of a load balancer
+kubernetes_master_port: 8443 # Kubernetes API server port
 master_target_pool: # target pool that master nodes will be a part of
 worker_target_pool: # target pool that worker nodes will be a part of
 
