Rename kubernetes-master-port and host to underscored name
[#147478175]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/ops-files/k8s_master_static_ip.yml
+++ b/manifests/ops-files/k8s_master_static_ip.yml
@@ -1,4 +1,4 @@
 - type: replace
   path: /networks/type=manual/subnets/0/static
   value:
-  - ((kubernetes-master-host))
+  - ((kubernetes_master_host))
