--- a/manifests/ops-files/master-haproxy.yml
+++ b/manifests/ops-files/master-haproxy.yml
@@ -9,4 +9,4 @@
 - type: replace
   path: /instance_groups/name=master-haproxy/networks/0/static_ips
   value:
-  - ((kubernetes-master-host))
+  - ((kubernetes_master_host))
