Added internal kubernetes service IP address to certificate
[#148340689]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -133,4 +133,4 @@ variables:
   options:
     ca: kubo_ca
     common_name: ((kubernetes_master_host))
-    alternative_names: [((kubernetes_master_host))]
+    alternative_names: [((kubernetes_master_host)), '10.100.200.1']
