Add SAN in cf-routing ops-file as well
[#148340689]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -31,7 +31,9 @@
 
 - type: replace
   path: /variables/name=tls-kubernetes/options/alternative_names
-  value: [((cf-tcp-router-name))]
+  value:
+  - ((cf-tcp-router-name))
+  - 10.100.200.1
 
 - type: replace
   path: /instance_groups/name=master/jobs/-
