--- a/manifests/ops-files/remove-haproxy.yml
+++ b/manifests/ops-files/remove-haproxy.yml
@@ -1,4 +1,8 @@
 - type: remove
-  path: /instance_groups/name=master-haproxy?
+  path: /instance_groups/name=master-haproxy
 - type: remove
-  path: /releases/name=haproxy?
+  path: /releases/name=haproxy
+- type: remove
+  path: /instance_groups/name=master/jobs/name=kubernetes-api/properties/backend_port
+- type: remove
+  path: /instance_groups/name=master/jobs/name=kubernetes-api/properties/port
