Manifest, cloud-config, and ops file adjustments to support OpenStack with VIP networking, and HAproxy deployments on it [#146527353]
Signed-off-by: Tony Wong <twong@pivotal.io>

--- a/configurations/openstack/cloud-config.yml
+++ b/configurations/openstack/cloud-config.yml
@@ -34,9 +34,11 @@ networks:
     azs: [z1]
     dns: [((internal_ip))]
     reserved:
-    - ((reserved_cidr))
+    - ((reserved_ips))
     cloud_properties:
       net_id: ((net_id))
+- name: vip
+  type: vip
 
 compilation:
   workers: 5
