--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -12,8 +12,8 @@ releases:
   url: https://bosh.io/d/github.com/cf-platform-eng/docker-boshrelease?v=28.0.1
   sha1: 448eaa2f478dc8794933781b478fae02aa44ed6b
 - name: haproxy
-  url: https://storage.googleapis.com/kubo-releases/haproxy_tmp_v8.2.x.tgz
-  sha1: 90c314cee3551d32860ed6faf405648abae888b8
+  url: https://bosh.io/d/github.com/cloudfoundry-community/haproxy-boshrelease?v=8.3.0
+  sha1: 068dbaa06a3098ec040bd6e5719e6225c4137a69
   version: latest
 
 stemcells:
