Doc and manifest changes for gcePersistentDisk support

--- a/configurations/gcp/cloud-config.yml
+++ b/configurations/gcp/cloud-config.yml
@@ -24,6 +24,7 @@ vm_types:
     machine_type: n1-standard-1
     root_disk_size_gb: 20
     root_disk_type: pd-ssd
+    service_account: ((service_account))
     tags: ((tags))
 
 - name: master
@@ -31,6 +32,7 @@ vm_types:
     machine_type: n1-standard-1
     root_disk_size_gb: 20
     root_disk_type: pd-ssd
+    service_account: ((service_account))
     tags: ((tags))
 
 - name: worker
@@ -38,6 +40,7 @@ vm_types:
     machine_type: n1-standard-2
     root_disk_size_gb: 100
     root_disk_type: pd-ssd
+    service_account: ((service_account))
     tags: ((tags))
 
 disk_types:
