--- a/uaa.yml
+++ b/uaa.yml
@@ -2,9 +2,9 @@
   path: /releases/-
   value:
     name: uaa
-    version: "40"
-    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-40-ubuntu-trusty-3421.9-20170621-054414-740710591-20170621054420.tgz?versionId=6jmAYeAgttYgg3f5t3.8tiE3rUzdOecd
-    sha1: ff99afc8ca639fcfa9c545abb9dc0e7b04ed1335
+    version: "41"
+    url: https://s3.amazonaws.com/bosh-compiled-release-tarballs/uaa-41-ubuntu-trusty-3421.9-20170621-061436-615669844-20170621061441.tgz
+    sha1: e3c6e9baacb19158ff50281a8cda39a01563a5d8
 
 # Switch Director to use UAA
 - type: replace
