Removed all occurrences of stemcell_version and stemcell_url
The stemcell version is now hard-coded

[#148252187]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -19,7 +19,7 @@ releases:
 stemcells:
 - alias: trusty
   os: ubuntu-trusty
-  version: ((stemcell_version))
+  version: "3421.11"
 
 instance_groups:
 - name: etcd
