Upload stemcell from manifest in deploy_k8s
+ Added tests for the deploy_k8s script

[#148252187]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>
Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -3,17 +3,17 @@ name: ((deployment_name))
 releases:
 - name: kubo-etcd
   version: 2
-  url: https://github.com/pivotal-cf-experimental/kubo-etcd/releases/download/v2/kubo-etcd.2.tgz
-  sha1: ae95e661cd9df3bdc59ee38bf94dd98e2f280d4f
+  url: https://storage.googleapis.com/kubo-public/kubo-etcd-2-ubuntu-trusty-3421.11-20170721-091603-591124789-20170721091609.tgz
+  sha1: 91f7a6592ee6c5242854f3654fe786574e816ffc
 - name: kubo
   version: latest
 - name: docker
   version: 28.0.1
-  url: https://bosh.io/d/github.com/cf-platform-eng/docker-boshrelease?v=28.0.1
-  sha1: 448eaa2f478dc8794933781b478fae02aa44ed6b
+  url: https://storage.googleapis.com/kubo-public/docker-28.0.1-ubuntu-trusty-3421.11-20170720-164316-303456764-20170720164324.tgz
+  sha1: 0ac80f013cc686047cdd7ccc428a8784c5e691bc
 - name: haproxy
-  url: https://bosh.io/d/github.com/cloudfoundry-community/haproxy-boshrelease?v=8.3.0
-  sha1: 068dbaa06a3098ec040bd6e5719e6225c4137a69
+  url: https://storage.googleapis.com/kubo-public/haproxy-8.3.0-ubuntu-trusty-3421.11-20170721-091831-348952426-20170721091831.tgz
+  sha1: 19f705d4958b24a4c49e9ec8770b5bee4ba454be
   version: latest
 
 stemcells:
