Disabling http listeners on master and worker haproxy nodes, in order to avoid conflicts with tcp passthrough when using port 80

--- a/manifests/ops-files/worker-haproxy.yml
+++ b/manifests/ops-files/worker-haproxy.yml
@@ -17,6 +17,7 @@
             from: worker_haproxy
         properties:
           ha_proxy:
+            disable_http: true
             tcp_link_port: 9999 # required, but not used
 
 - type: replace
