--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -95,6 +95,7 @@ instance_groups:
 
     properties:
       ha_proxy:
+        disable_http: true
         tcp_link_port: 9999 # required, but not used
 
 - name: worker
