Adding kubernetes service SANs to tls-kubernetes certificate [#148906175]
Signed-off-by: Tony Wong <twong@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -171,3 +171,7 @@ variables:
     alternative_names:
     - ((kubernetes_master_host))
     - 10.100.200.1
+    - kubernetes
+    - kubernetes.default
+    - kubernetes.default.svc
+    - kubernetes.default.svc.cluster.local
