--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -26,16 +26,12 @@
 - type: replace
   path: /instance_groups/-
   value:
-    name: proxy
+    name: route-sync
     instances: 1
     networks:
     - name: ((deployments_network))
     azs: [z1]
     jobs:
-    - name: nginx
-      release: kubo
-    - name: flanneld
-      release: kubo
     - name: kubeconfig
       release: kubo
       properties:
@@ -43,10 +39,6 @@
         kubelet-password: ((kubelet-password))
         tls:
           kubernetes: ((tls-kubernetes))
-    - name: kubernetes-proxy
-      release: kubo
-      properties:
-        kubernetes-api-url: "https://((kubernetes_master_host)):((kubernetes_master_port))"
     - name: route-sync
       release: kubo
       properties:
