--- a/configurations/openstack/bosh-dynamic-net.yml
+++ b/configurations/openstack/bosh-dynamic-net.yml
@@ -5,5 +5,6 @@
     name: default
     type: dynamic
     subnets:
-    - cloud_properties:
+    - dns: [8.8.8.8]
+      cloud_properties:
         net_id: ((net_id))
