--- a/configurations/openstack/cloud-config.yml
+++ b/configurations/openstack/cloud-config.yml
@@ -29,8 +29,12 @@ networks:
 - name: ((deployments_network))
   type: dynamic
   subnets:
-  - azs: [z1]
+  - range: ((internal_cidr))
+    gateway: ((internal_gw))
+    azs: [z1]
     dns: [((internal_ip))]
+    reserved:
+    - ((reserved_ips))
     cloud_properties:
       net_id: ((net_id))
 - name: vip
