Fix path of powerdns opsfile in deployments
* Add tests for bosh deployment on AWS
* Refactor deploy_bosh so errors of moving ops files can be caught by CI

[#149880502]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/src/kubo-deployment-tests/resources/environments/test_aws_with_creds/director-secrets.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_aws_with_creds/director-secrets.yml
@@ -3,4 +3,5 @@
 # routing-cf-client-secret: # UAA client secret for routing client
 # routing-cf-nats-password: # Password for Cloud Foundry NATS
 
-openstack_password: # admin user password for OpenStack
+access_key_id: # AWS Access Key ID
+secret_access_key: # AWS Access Key Secret
