Add ops file for AWS persistence and sample for iam_instance_profile
[#149010631]

Signed-off-by: Brendan Nolan <bnolan@pivotal.io>

--- a/configurations/aws/cloud-config.yml
+++ b/configurations/aws/cloud-config.yml
@@ -18,10 +18,12 @@ vm_types:
   cloud_properties:
     instance_type: t2.small
     ephemeral_disk: {size: 25_000}
+    iam_instance_profile: alpaca-pv
 - name: worker
   cloud_properties:
     instance_type: m4.xlarge
     ephemeral_disk: {size: 100_000}
+    iam_instance_profile: alpaca-pv
 
 disk_types:
 - name: 10240
