--- a/configurations/aws/cloud-config.yml
+++ b/configurations/aws/cloud-config.yml
@@ -18,12 +18,12 @@ vm_types:
   cloud_properties:
     instance_type: t2.small
     ephemeral_disk: {size: 25_000}
-    iam_instance_profile: kubernetes-cloud-provider-master
+    iam_instance_profile: ((master_iam_instance_profile))
 - name: worker
   cloud_properties:
     instance_type: m4.xlarge
     ephemeral_disk: {size: 100_000}
-    iam_instance_profile: kubernetes-cloud-provider-worker
+    iam_instance_profile: ((worker_iam_instance_profile))
 
 disk_types:
 - name: 10240
