Add KubernetesCluster tag so dnslookup conflicts across VPCs don't cause k8s cloud provider to fail
[#149010631]

Signed-off-by: Brendan Nolan <bnolan@pivotal.io>

--- a/manifests/kubo.yml
+++ b/manifests/kubo.yml
@@ -140,6 +140,9 @@ instance_groups:
   vm_type: worker
   persistent_disk_type: 10240
 
+tags:
+  KubernetesCluster: ((director_name))/((deployment_name))
+
 update:
   canaries: 1
   max_in_flight: 1
