--- a/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp/director.yml
@@ -20,7 +20,7 @@ credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABC
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
 
-director_name: # user friendly Director name
+director_name: TheDirector # user friendly Director name
 dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
 
 credhub_release_url: https://bosh.io/d/github.com/pivotal-cf/credhub-release?v=1.0.0
