Use generated tag in AWS lb ops file
[#150176699]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/manifests/ops-files/aws-lb.yml
+++ b/manifests/ops-files/aws-lb.yml
@@ -1,4 +1,4 @@
 - type: replace
   path: /tags?
   value:
-    KubernetesCluster: ((director_name))/((deployment_name))
+    KubernetesCluster: ((kubernetes_cluster_tag))
