--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -2,16 +2,12 @@ internal_ip: # Internal ip address of the BOSH director. Please select an availa
 
 deployments_network: # Network name to deploy service in your cloud config
 
-credhub_encryption_key: # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
-
 internal_cidr: # CIDR range that BOSH will deploy to
 internal_gw: # internal gateway
-kubernetes_master_port: # Port to use for Kubernetes API
 
 director_name: # user friendly Director name
 dns_recursor_ip: # DNS IP address for resolving non-BOSH hostnames
 
-credhub_release_url: https://bosh.io/d/github.com/pivotal-cf/credhub-release?v=1.0.0
 kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
 
 # Proxy routing mode settings
@@ -36,6 +32,7 @@ master_target_pool: # target pool that master nodes will be a part of
 # Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
 # routing_mode: cf
 # kubernetes_master_host: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
+# kubernetes_master_port: # Port for kubernetes api-server on HA Proxy master node
 # routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
 # routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
 # routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
