Autogenerate worker-node-tag
[#150844758]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/manifests/ops-files/gcp-cloud-provider.yml
+++ b/manifests/ops-files/gcp-cloud-provider.yml
@@ -5,7 +5,7 @@
     gce:
       project-id: ((project_id))
       network-name: ((network))
-      worker-node-tag: ((worker_node_tag))
+      worker-node-tag: ((director_name))-((deployment_name))-worker
 - type: replace
   path: /instance_groups/name=master/jobs/name=cloud-provider/properties/cloud-provider?
   value:
@@ -13,4 +13,4 @@
     gce:
       project-id: ((project_id))
       network-name: ((network))
-      worker-node-tag: ((worker_node_tag))
+      worker-node-tag: ((director_name))-((deployment_name))-worker
